# AI-for-Business-Prognosis

./: README.md  S_ARIMA_X_LiveDemo.ipynb  pyproject.toml
DeepLearning_NBEATS/HandsOnÜbung/: N_BEATS_HandsOnÜbung.ipynb
DeepLearning_NBEATS/HandsOnÜbung/data/: Hourly-test.csv  Hourly-train.csv
DeepLearning_NBEATS/LiveDemo/: N_BEATS_LiveDemo.ipynb
DeepLearning_NBEATS/LiveDemo/Daten/: klassische_forecasts.csv  klassische_rmse.csv  split_config.json  stromdaten_stuendlich.csv
