[project]
name = "ai_for_business_prognosis"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "ipykernel>=7.2.0",
    "nbeats-pytorch>=1.8.0",
    "ipywidgets>=8.1.7",
    "scikit-learn>=1.9.0",
    "statsmodels>=0.14.6",
]

[dependency-groups]
# PyTorch-Varianten: CPU (Standard) und CUDA (optional).
# Die konkrete Wheel-Quelle (CPU- vs. CUDA-Index) wird weiter unten in
# [tool.uv.sources] festgelegt. "cpu" ist als default-group aktiv, daher
# installiert "uv sync" die CPU-Variante.
cpu = [
    "torch>=2.0.0",
]
cu124 = [
    "torch>=2.0.0",
]

live_demos = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "nbeats-pytorch>=1.8.0",
    "numpy>=2.0.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pmdarima>=2.1.1",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]

nbeats = [
    "ipykernel>=7.2.0",
    "nbeats-pytorch>=1.8.0",
    "ipywidgets>=8.1.7",
    "scikit-learn>=1.9.0",
    "statsmodels>=0.14.6",
]

sarima = [
    "ipywidgets>=8.1.7",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.0.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pmdarima>=2.1.1",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]

[tool.uv]
# "cpu" ist standardmäßig aktiv -> "uv sync" installiert PyTorch ohne CUDA.
default-groups = ["cpu"]
# CPU- und CUDA-Variante schließen sich gegenseitig aus.
conflicts = [
    [
        { group = "cpu" },
        { group = "cu124" },
    ],
]

[tool.uv.sources]
# torch je nach aktiver Gruppe vom passenden PyTorch-Index beziehen.
torch = [
    { index = "pytorch-cpu", group = "cpu" },
    { index = "pytorch-cu124", group = "cu124" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
